# memrise-audio-uploader

./: .gitignore  Makefile  Pipfile  README.md  main.py  mypy.ini  pylintrc  pyproject.toml  tests.py
.github/workflows/: ci.yml  codeql-analysis.yml
api/: memrise.py
libs/: __init__.py  synthesizator.py
memrise_audio_uploader/: __init__.py  __main__.py  cli.py
memrise_audio_uploader/lib/: synthesizator.py
memrise_audio_uploader/lib/memrise/: __init__.py  client.py  exceptions.py  models.py
tests/: test_main.py
